# anti-gravity-core

./: .gitignore  App.tsx  IMPLEMENTATION_SUMMARY.md  PYTORCH_IMPLEMENTATION.md  package-lock.json  pyproject.toml  vite-env.d.ts
docs/: PYTORCH_IMPLEMENTATION.md
examples/: hrr_memory_demo.py  train_classification.py
harmonic-field/: HarmonicFieldModel.ts  README.md  index.ts
harmonic-field/attention/: HolographicAttention.ts
harmonic-field/core/: ComplexTensor.ts
harmonic-field/energy/: GlobalWorkspace.ts
harmonic-field/examples/: basic-usage.ts  xor-demo.ts
harmonic-field/holographic/: HolographicReducedRepresentation.ts
harmonic-field/layers/: ComplexLayers.ts
harmonic-field/tests/: ComplexTensor.test.ts  HarmonicFieldModel.test.ts  HolographicReducedRepresentation.test.ts
harmonic_field/: __init__.py  biform.py  broadcast.py  circular_ops.py  full_system.py  phase_focus.py  phase_net.py  potential.py
hooks/: useAudioRecorder.ts  useZacConnection.ts
tests/: test_harmonic_field.py
utils/: audioUtils.ts
